--- a/src/Components/FloatingComp/FloatingComp.css
+++ b/src/Components/FloatingComp/FloatingComp.css
@@ -1,3 +1,47 @@
 .float-Wrapper {
-  color: white;
+  z-index: 2;
+  background: white;
+  display: flex;
+  justify-content: space-around;
+  border-radius: 17px;
+  align-items: center;
+  height: 3.5rem;
+  padding: 0px 20px 1px 2px;
+}
+
+img {
+  transform: scale(0.4);
+}
+
+.float-Wrapper span {
+  font-size: 16px;
+  font-family: sans-serif;
+}
+
+.coolEmoji {
+  transform: scale(1.25);
+  top: -20%;
+  left: -20%;
+}
+
+.blur {
+  height: 14rem;
+  width: 22rem;
+  filter: blur(72px);
+  border-radius: 50%;
+  background-color: #edd0ff;
+  z-index: -1;
+  top: -10%;
+  right: 0%;
+}
+
+.blur2 {
+  height: 14rem;
+  width: 22rem;
+  filter: blur(72px);
+  border-radius: 50%;
+  background-color: #c1f5ff;
+  z-index: -1;
+  bottom: 3%;
+  left: -25%;
 }
