--- a/src/Components/Intro/Intro.css
+++ b/src/Components/Intro/Intro.css
@@ -50,9 +50,11 @@
   position: relative;
 }
 
-.i-right img {
+.i-right > * {
   position: absolute;
+  z-index: 1;
 }
+
 .i-right > :nth-child(1) {
   transform: scale(0.98);
   z-index: 2;
@@ -70,4 +72,17 @@
   transform: scale(0.75);
   top: -15%;
   left: -9%;
+}
+
+.floatingDiv {
+  top: -8%;
+  right: 3%;
+  box-shadow: var(--boxShadow);
+}
+
+.floatingDiv2 {
+  bottom: 30%;
+  left: 4%;
+  box-shadow: var(--boxShadow);
+  z-index: 3;
 }
