--- a/src/App.css
+++ b/src/App.css
@@ -64,3 +64,9 @@
   background-color: #c1f5ff;
   z-index: -1;
 }
+
+@media screen and (max-width: 480px) {
+  .App {
+    padding: 0.5rem 1rem;
+  }
+}
