--- a/src/Components/Contact/Contact.css
+++ b/src/Components/Contact/Contact.css
@@ -82,3 +82,11 @@ form span {
   text-align: center;
   padding-top: 12px;
 }
+
+@media screen and (max-width: 480px) {
+  .Contact-Wrapper {
+    flex-direction: column;
+    gap: 1rem;
+    margin: 10rem 0;
+  }
+}
