--- a/src/Components/Stats/Stats.css
+++ b/src/Components/Stats/Stats.css
@@ -7,3 +7,13 @@
   margin-bottom: 4rem;
   margin-top: 2rem;
 }
+
+@media screen and (max-width: 480px) {
+  .Stats-Wrapper {
+    width: 100%;
+    margin: 20rem 0;
+    margin-top: 30rem;
+    flex-direction: column;
+    gap: 2.5rem;
+  }
+}
